2012-01-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c:
	* Source/CFDateFormatter.c:
	* Source/CFNumberFormatter.c:
	* Source/CFStringUtilities.c:
	* Source/GSPrivate.h: Introduce private function to get a C string
	locale.

2012-01-02 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCharacterSet.c: Added predefined set support.

2012-01-02 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFCharacterSet.c: Added most functions.

2012-01-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Headers/CoreFoundation/CFCharacterSet.h:
	* Source/CFCharacterSet.c: CFCharacterSet skeleton.

2012-01-01 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h: New CAS atomic function.
	* Source/CFRuntime.c: Make sure corebase is only initialized once.
	* Source/GNUmakefile:
	* Source/Identifers.m:
	* Source/Keys+Identifiers.c: Make constant strings CFString types.
	* Source/CFString.c:
	* Source/NSCFType.m: Hack to support constant strings.

2011-12-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFRuntime.h:
	* Source/CFRuntime.c: Added GC functions and variables.  Not
	currently used in corebase.

2011-12-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBitVector.c: Added implementation to most functinos.
	* Source/CFUUID.c: Fixed sscanf usage bug.

2011-12-28 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h: Added GSHashBytes().
	* Source/CFString.c: Use GSHashBytes() for hashing strings.
	* Source/CFUUID.c: Some changes to the Windows code.
	* Source/GSHashTable.c:
	* Source/GSHashTable.h: Copy call backs.

2011-12-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFBitVector.c: Some work on CFBitVector.

2011-12-21 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFBitVector.c:
	* Source/CFBinaryHeap.c:
	* Headers/CoreFoundation/CFBinaryHeap.h:
	* Headers/CoreFoundation/CFBitVector.h: Added skeleton for
	CFBinaryHeap and CFBitVector.
